force-app/main/default/objects/MUSW__Submission__c/fields/AVO_Inspection__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>MUSW__Inspection__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>