force-app/main/default/objects/MUSW__Submission__c/fields/AVO_Submission_Cloned__c.field-meta.xml
<CustomField>
    <fullName>AVO_Submission_Cloned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission Cloned</label>
    <referenceTo>MUSW__Submission__c</referenceTo>
    <relationshipLabel>Submission Clones</relationshipLabel>
    <relationshipName>SubmissionClones</relationshipName>
    <type>Lookup</type>
</CustomField>