force-app/main/default/objects/MUSW__Submission__c/fields/bgcc__Is_Supplementary__c.field-meta.xml
<CustomField>
    <fullName>bgcc__Is_Supplementary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>a flag that indicate if the submission is a supplementary submission.</description>
    <label>Is Supplementary</label>
    <type>Checkbox</type>
</CustomField>