force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__Action_Link__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Action_Link__c</fullName>
    <description>To add custom Actions to clients, duplicate this field, add custom landing URL, and add it to the fieldset</description>
    <formula>IF(ISBLANK( MUSW__Submission_DateTime__c), HYPERLINK(&quot;/p/attach/NoteAttach?pid=&quot; + Id + &quot;&amp;parentname=&quot; + Name + &quot;&amp;retURL=%2F&quot; + Id, &quot;Upload&quot;) + IF(NOT(ISBLANK( MUSW__Link__c )), &quot; / &quot; + HYPERLINK( MUSW__Link__c, &quot;Download Form&quot;), &quot;&quot;) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actions</label>
    <type>Text</type>
</CustomField>