force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__BG_External_File_Id__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_External_File_Id__c</fullName>
    <description>For Bluebeam files, this is &lt;Project Id&gt;:&lt;File Id&gt;</description>
    <externalId>true</externalId>
    <label>External File Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>