force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__BG_File_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_File_Location_Type__c</fullName>
    <description>Location of the document or file related to this submission record. Default is Salesforce</description>
    <inlineHelpText>Location of the document or file related to this submission record.</inlineHelpText>
    <label>File Location Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Bluebeam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>