force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__Link__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Link__c</fullName>
    <label>Link</label>
    <type>Url</type>
</CustomField>