force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__Milestone__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The milestone (review cycle) that a submission relates to.</description>
    <label>Milestone</label>
    <referenceTo>MUSW__Milestone__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>