force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__Required__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>