force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__Submission_Template__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Submission_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission Template</label>
    <referenceTo>MUSW__Master_Submission_List__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>