force-app/main/default/objects/MUSW__Submission__c/fields/MUSW__Total_Failed_Reviews__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Total_Failed_Reviews__c</fullName>
    <label>Total Failed Reviews</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>