force-app/main/default/objects/MUSW__Submission__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; MUSW__Permit2__c + MUSW__Application2__c + MUSW__License2__c + AVO_Inspection__c,
	MUSW__Permit2__r.Name + MUSW__Application2__r.Name +  MUSW__License2__r.Name + AVO_Inspection__r.Name, &quot;_parent&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To</label>
    <type>Text</type>
</CustomField>