force-app/main/default/objects/MUSW__Submission__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledgment Letter</fullName>
            </value>
            <value>
                <fullName>Administrative Order</fullName>
            </value>
            <value>
                <fullName>Aerial Imagery Map</fullName>
            </value>
            <value>
                <fullName>Agric Water Reuse Feasibility Study</fullName>
            </value>
            <value>
                <fullName>Agric Water Right Agreement</fullName>
            </value>
            <value>
                <fullName>AG SW Pump Information Form</fullName>
            </value>
            <value>
                <fullName>AG Well Data Sheet</fullName>
            </value>
            <value>
                <fullName>Application Attestation Form</fullName>
            </value>
            <value>
                <fullName>Application Form</fullName>
            </value>
            <value>
                <fullName>Application Map</fullName>
            </value>
            <value>
                <fullName>Appraisal Notes</fullName>
            </value>
            <value>
                <fullName>Bill of Sale</fullName>
            </value>
            <value>
                <fullName>Compliance Document</fullName>
            </value>
            <value>
                <fullName>Consent Order</fullName>
            </value>
            <value>
                <fullName>Consolidated Conservation Plan</fullName>
            </value>
            <value>
                <fullName>Digital Photos of the Meter (Including Serial Number)</fullName>
            </value>
            <value>
                <fullName>Digital Photos of the Meter (Installation with surroudning piping)</fullName>
            </value>
            <value>
                <fullName>Expired LOC Document</fullName>
            </value>
            <value>
                <fullName>Expiring LOC Document</fullName>
            </value>
            <value>
                <fullName>Flow Meter Approval Form</fullName>
            </value>
            <value>
                <fullName>GeoEval Sheet Page 1</fullName>
            </value>
            <value>
                <fullName>GeoEval Sheet Page 2</fullName>
            </value>
            <value>
                <fullName>Incomplete Meter Installation Notice</fullName>
            </value>
            <value>
                <fullName>Irrigation Efficiency Certification Form</fullName>
            </value>
            <value>
                <fullName>Irrigation Efficiency Form</fullName>
            </value>
            <value>
                <fullName>Last Will and Testament</fullName>
            </value>
            <value>
                <fullName>LOC Document</fullName>
            </value>
            <value>
                <fullName>LOC No Low Flows</fullName>
            </value>
            <value>
                <fullName>Low Flow Guidance</fullName>
            </value>
            <value>
                <fullName>Low flow protection plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>