force-app/main/default/objects/MUSW__Submission__c/recordTypes/Avo_Submission_Default.recordType-meta.xml
<RecordType>
    <fullName>Avo_Submission_Default</fullName>
    <active>true</active>
    <label>Avo Submission Default</label>
</RecordType>