force-app/main/default/objects/MUSW__Submission__c/listViews/Completed_Submission_Submission.listView-meta.xml
<ListView>
    <fullName>Completed_Submission_Submission</fullName>
    <filterScope>Queue</filterScope>
    <label>Completed Submission</label>
    <queue>Completed_Submission</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>