force-app/main/default/objects/MUSW__Submission__c/listViews/Submissions_In_Review.listView-meta.xml
<ListView>
    <fullName>Submissions_In_Review</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Required__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Submission_DateTime__c</columns>
    <columns>MUSW__Permit2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MUSW__Status__c</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>Submissions In Review</label>
</ListView>